[package]
name = "jsonwebtoken"
version = "7.2.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
license = "MIT"
readme = "README.md"
description = "Create and decode JWTs in a strongly typed way."
homepage = "https://github.com/Keats/jsonwebtoken"
repository = "https://github.com/Keats/jsonwebtoken"
keywords = ["jwt", "web", "api", "token", "jwk"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
exclude = ["/sgx/*"]

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "sgx_tstd/backtrace"]

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
serde_json =  { git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
ring = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
# For PEM decoding
pem = { rev = "sgx-1.1.2", git = "https://github.com/NTSC-J/pem-rs-sgx.git" }
simple_asn1 = { rev = "sgx-1.1.2", git = "https://github.com/NTSC-J/simple_asn1-sgx.git" }

[dev-dependencies]
# For the custom chrono example
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
criterion = "0.3"

[[bench]]
name = "jwt"
harness = false

[badges]
maintenance = { status = "passively-maintained" }
